--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Otrov</title>
+	<title>Rogue</title>
 
-	<meta property="og:title" content="Otrov" />
-	<meta property="og:type" content="Otrov" />
+	<meta property="og:title" content="Rogue" />
+	<meta property="og:type" content="Rogue" />
+	<meta property="og:url" content="https://rogue.1pqpw.repl.co" />
 	<meta property="og:image" content="images/red.png" />
-	<meta property="og:description" content="Search, Play, Chat - Otrov" />
+	<meta property="og:description" content="Search, Play, Chat - Go Rogue" />
 	<meta name="theme-color" content="#B82B2B">
 
 	<link rel="icon" type="image/png" href="images/favicon.png" />
@@ -40,7 +41,7 @@
 		
 		<header>
 			<div class="widget title">
-				<p>Otrov</p>
+				<p>Rogue</p>
 			</div>
 			
 			<div class="settings">
