--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Rogue</title>
+	<title>Otrov</title>
 
-	<meta property="og:title" content="Rogue" />
-	<meta property="og:type" content="Rogue" />
-	<meta property="og:url" content="https://rogue.1pqpw.repl.co" />
+	<meta property="og:title" content="Otrov" />
+	<meta property="og:type" content="Otrov" />
 	<meta property="og:image" content="images/red.png" />
-	<meta property="og:description" content="Search, Play, Chat - Go Rogue" />
+	<meta property="og:description" content="Search, Play, Chat - Otrov" />
 	<meta name="theme-color" content="#B82B2B">
 
 	<link rel="icon" type="image/png" href="images/favicon.png" />
@@ -41,7 +40,7 @@
 		
 		<header>
 			<div class="widget title">
-				<p>Rogue</p>
+				<p>Otrov</p>
 			</div>
 			
 			<div class="settings">
@@ -64,7 +63,7 @@
 					<p>Play</p>
 				</div>
 
-				<div class="widget lineup" data-redirect="https://discord.gg/XvshCVhH4h">
+				<div class="widget lineup" data-redirect="https://simple-chat.eht.repl.co">
 					<img src="images/discord.png"/>
 					<p>Chat</p>
 				</div>
